--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,16 +3,18 @@ name: Node.js CI
 on:
   push:
     branches: [ main ]
-
+  pull_request: 
+    branches: '*'
+    
 jobs:
-  build:
+  quality:
 
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        os: [windows-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
