--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<scm>
+		<developerConnection>scm:git:https://github.com/Robinson-Dev/users/</developerConnection>
+	</scm>
 </project>
