--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 	</build>
 	<scm>
 		<developerConnection>scm:git:https://github.com/Robinson-Dev/users/</developerConnection>
-		<url>https://github.com/Robinson-Dev/users/</url>
+		<url>https://github.com/Robinson-Dev/users/users.git</url>
 		<tag>users-0.0.1</tag>
 	</scm>
 </project>
