--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.learning</groupId>
 	<artifactId>users</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>22.0.0</version>
+            <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -67,8 +67,7 @@
 		</plugins>
 	</build>
 	<scm>
-		<developerConnection>scm:git:https://github.com/Robinson-Dev/users/develop/</developerConnection>
-		<url>scm:git:https://github.com/Robinson-Dev/users/develop/</url>
-		<tag>users-0.0.1</tag>
+		<developerConnection>scm:git:https://github.com/Robinson-Dev/users/</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 </project>
