--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.learning</groupId>
 	<artifactId>users</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -66,10 +66,23 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://github.com/Robinson-Dev/users</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://github.com/Robinson-Dev/users</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<scm>
 		<connection>scm:git:http://github.com/Robinson-Dev/users</connection>
 		<developerConnection>scm:git:https://github.com/Robinson-Dev/users</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/Robinson-Dev/users</url>
 	</scm>
+
 </project>
