--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,11 +18,11 @@ jobs:
 
     steps:
     - uses: action/checkout@develop
-    - name: Set up JDK 11
+    - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: '16'
+        distribution: 'Oracle OpenJDK'
         cache: maven
-    - name: Build with Maven
-      run: mvn test --file ./pom.xml
+    - name: Testing with Maven
+      run: mvn test --file pom.xml
