--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,3 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run maven test command
         run: mvn test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
