--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,3 +17,8 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+            file: ./target/site/jacoco/jacoco.xml
+            verbose: true
+            
+           
