--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-            file: ./target/site/jacoco/jacoco.xml
+            file: ./target/site/jacoco/index.html
             verbose: true
             
            
