reseting project class to start again as I should

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run maven test command
-        run: mvn test
+        run: mvn clean verify
