--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -23,4 +23,5 @@ jobs:
         run: |
           mvn clean
           mvn verify
-      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
