--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -30,3 +30,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOVERAGE_TOKEN }} # not required for public repos
+          files: ./coverage1.xml,./coverage2.xml # optional
+          flags: unittests # optional
+          name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
