--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -32,7 +32,8 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOVERAGE_TOKEN }} # not required for public repos
-          files: ./coverage1.xml,./coverage2.xml # optional
+          directory: ./target/site/jacoco/
+          files: ./target/site/jacoco/index.xml  
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
