--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: ./coverage1.xml,./coverage2.xml # optional
+          files: ./jacoco.xml,./index.html # optional
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
