--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -2,9 +2,9 @@ name: Java CI
 
 on: 
   push: 
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: 
+    - '**'
     
 jobs:
   verify:			
