--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -2,9 +2,10 @@ name: Java CI
 
 on: 
   push: 
-  pull_request:
-    branches: 
-    - '**'
+    branches:
+    - 'main'
+    - 'develop'
+    - 'feature/**'
     
 jobs:
   verify:			
