--- a/.github/workflows/Java_Maven_CI.yml
+++ b/.github/workflows/Java_Maven_CI.yml
@@ -1,11 +1,6 @@
 name: Java CI
 
-on: 
-  push: 
-    branches:
-    - 'main'
-    - 'develop'
-    - 'feature/**'
+on: [push]
     
 jobs:
   verify:			
