adjusted to execute workflow for docker when push occurs

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,10 +2,7 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ resource/create-integration-docker-git ]
-  pull_request:
-    branches: [ resource/create-integration-docker-git ]
+  push
 
 jobs:
   docker:
